fix(core): update control height and control contrast corrections
- Updated control height variables to use system-level interaction field height across various components.
- Fixed issue with incorrect interaction state computed colors due to bad inheritance
- Fixed issue when a control/interaction failed to have contrast due to no inherited background to compute from

--- a/projects/elements/src/button/button.css
+++ b/projects/elements/src/button/button.css
@@ -1,5 +1,5 @@
 :host {
-  --nve-sys-interaction-state-base: var(--background);
+  --nve-sys-interaction-state-base: var(--background, var(--nve-sys-layer-canvas-background));
   --background: var(--nve-sys-interaction-background);
   --color: var(--nve-sys-interaction-color);
   --padding: 0 var(--nve-ref-size-300);
@@ -11,7 +11,7 @@
   --text-align: center;
   --cursor: pointer;
   --gap: var(--nve-ref-space-xs);
-  --height: var(--nve-ref-size-800);
+  --height: var(--nve-sys-interaction-field-height);
   --text-transform: capitalize;
   --line-height: 1.1em;
   --_icon-color: var(--color);
@@ -113,13 +113,11 @@
 :host([interaction='emphasis']) {
   --color: var(--nve-sys-interaction-emphasis-color);
   --background: var(--nve-sys-interaction-emphasis-background);
-  --nve-sys-interaction-state-mix: var(--nve-ref-color-black);
 }
 
 :host([interaction='destructive']) {
   --color: var(--nve-sys-interaction-destructive-color);
   --background: var(--nve-sys-interaction-destructive-background);
-  --nve-sys-interaction-state-mix: var(--nve-ref-color-black);
 }
 
 :host([interaction='inverse']) {
