--- a/projects/elements/src/tree/tree-node.css
+++ b/projects/elements/src/tree/tree-node.css
@@ -3,6 +3,7 @@
   --border-radius: var(--nve-ref-border-radius-xs);
   --font-size: var(--nve-ref-font-size-100);
   --min-height: var(--nve-ref-size-800);
+  --nve-sys-interaction-state-base: var(--background, var(--nve-sys-layer-canvas-background));
   --text-wrap: nowrap;
   width: 100%;
   cursor: default;
